--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,14 +10,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Switch Fragment"
-        android:id="@+id/cmdPress"
-        />
+        android:id="@+id/cmdPress" />
 
     <FrameLayout
         android:id="@+id/fragmentContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-
     </FrameLayout>
 </LinearLayout>
